--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="sistema_espa_ol">Sistema español</string>
     <string name="unidades_farenheit">Unidades Fahrenheit</string>
     <string name="unidades_celcius">Unidades Celsius</string>
-    <string name="tempMaxFormat">Temp. Máxima: %.1f °C</string>
-    <string name="tempMinFormat">Temp. Mínima: %.1f °C</string>
+    <string name="tempMaxFormat" formatted="false">Temp. Máxima: %.1f %s</string>
+    <string name="tempMinFormat" formatted="false">Temp. Mínima: %.1f %s</string>
     <string name="humidityFormat">Humedad: %.0f %%</string>
     <string name="selecciona_las_unidades">Selecciona las unidades:</string>
+    <string name="settings">Ajustes</string>
 </resources>
