--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="selecciona_las_unidades">Selecciona las unidades:</string>
     <string name="settings">Ajustes</string>
     <string name="actualizado">Preferencias Actualizadas</string>
+    <string name="Madrid">Madrid</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
