Descargando datos JSON
Se consume un API con AsyncTask para obtener los datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="wheater">Wheater</string>
     <string name="anterior">Anterior</string>
     <string name="next">Siguiente</string>
+    <string name="error">Error</string>
+    <string name="error_descargando_info">Información del clima no disponible</string>
 </resources>
